--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title></title>
 </head>
 <body>
-    <h1>My first task</h1>
+    <h1>My first task.</h1>
 
     <p>I wanna complete with it ASAP!!!</p>
 </body>
