--- a/index.html
+++ b/index.html
@@ -8,5 +8,32 @@
     <h1>My first task.</h1>
 
     <p>I wanna complete with it ASAP!!!</p>
+
+    <style>
+        .table tr td {
+            background: #ee4ec6;
+            border: 1px solid #ccc;
+            padding: 10px;
+        }
+        .table tr td.second {
+            background: #87ee69;
+        }
+        .table tr td.last {
+            background: #4ab8ee;
+        }
+    </style>
+
+    <table class="table">
+        <tr>
+            <td>1</td>
+            <td class="second">Alexei programmer</td>
+            <td class="last">js</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td class="second">Sasha is not</td>
+            <td class="last">no js</td>
+        </tr>
+    </table>
 </body>
 </html>
