--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <table class="table">
         <tr>
             <td>1</td>
-            <td class="second">Alexei programmer</td>
+            <td class="second">Alexei is a programmer</td>
             <td class="last">js</td>
         </tr>
         <tr>
@@ -35,5 +35,28 @@
             <td class="last">no js</td>
         </tr>
     </table>
+
+
+    <h1>Ordered list</h1>
+    <ol>
+        <li>Create a numerous list</li>
+
+        <li>Then commit this list</li>
+
+        <li>And push it</li>
+
+    </ol>
+
+    <h1>Unordered list</h1>
+    <ul>
+        <li>Create a numerous list</li>
+
+        <li>Then commit this list</li>
+
+        <li>And push it</li>
+
+    </ul>
+
+
 </body>
 </html>
