Added styles to a css file

--- a/index.html
+++ b/index.html
@@ -3,25 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>My first task.</h1>
 
     <p>I wanna complete with it ASAP!!!</p>
 
-    <style>
-        .table tr td {
-            background: #ee4ec6;
-            border: 1px solid #ccc;
-            padding: 10px;
-        }
-        .table tr td.second {
-            background: #87ee69;
-        }
-        .table tr td.last {
-            background: #4ab8ee;
-        }
-    </style>
+
 
     <table class="table">
         <tr>
