In h1 added many dots

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>My first task.</h1>
+    <h1>My first task.........</h1>
 
     <p>I wanna complete with it ASAP!!!</p>
 
